--- a/LibraryManagementSystem/LibraryManagementSystem.vcxproj
+++ b/LibraryManagementSystem/LibraryManagementSystem.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="LibraryManagementSystem.cpp" />
+    <ClCompile Include="LinkedList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LinkedList.h" />
